Fixed button resizing, adjusted button color, added 10 more coins to track

--- a/icons/white/desktop.ini
+++ b/icons/white/desktop.ini
@@ -6,3 +6,11 @@ eur.png=@eur.png,0
 gbp.png=@gbp.png,0
 cny.png=@cny.png,0
 rub.png=@rub.png,0
+doge.png=@doge.png,0
+xmr.png=@xmr.png,0
+usdt.png=@usdt.png,0
+xlm.png=@xlm.png,0
+bch.png=@bch.png,0
+dot.png=@dot.png,0
+ada.png=@ada.png,0
+ltc.png=@ltc.png,0
